--- a/engraving.html
+++ b/engraving.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!---fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,16 +56,20 @@ body {
 canvas {
     max-width: 100%;
     max-height: 100%;
+    width: 100%;
+    height: auto;
+    touch-action: manipulation;
 }
 
 #lightbox {
     display: none;
     position: fixed;
+    inset: 0;
     z-index: 9999;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    overflow-y: auto;
     background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     align-items: center;
@@ -396,6 +401,11 @@ canvas {
 
 .selected-control {
     display: flex;
+}
+
+button, input[type="range"], .dropbtn {
+    min-height: 40px;
+    font-size: 16px;
 }
 
 </style>
