--- a/engraving.html
+++ b/engraving.html
@@ -58,7 +58,7 @@ canvas {
     max-height: 100%;
     width: 100%;
     height: auto;
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 #lightbox {
